[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/main.wav" type="AudioStream" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.772549, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu"]
margin_top = 485.0
margin_right = 98.0
margin_bottom = 499.0

[node name="LevelSelect" type="Button" parent="OptionsMenu"]
margin_top = 503.0
margin_right = 98.0
margin_bottom = 523.0
text = "Level Select"

[node name="Tutorial" type="Button" parent="OptionsMenu"]
margin_top = 527.0
margin_right = 98.0
margin_bottom = 547.0
text = "Tutorial"

[node name="Settings" type="Button" parent="OptionsMenu"]
margin_top = 551.0
margin_right = 98.0
margin_bottom = 571.0
text = "Settings"

[node name="Leaderboards" type="Button" parent="OptionsMenu"]
margin_top = 575.0
margin_right = 98.0
margin_bottom = 595.0
text = "Leaderboards"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="Options"]
margin_top = 464.0
margin_right = 100.0
margin_bottom = 478.0
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Options"]
margin_top = 482.0
margin_right = 100.0
margin_bottom = 498.0
min_value = -45.0
max_value = 0.0

[node name="FXLabel" type="Label" parent="Options"]
margin_top = 502.0
margin_right = 100.0
margin_bottom = 516.0
text = "FX volume"

[node name="FXSlider" type="HSlider" parent="Options"]
margin_top = 520.0
margin_right = 100.0
margin_bottom = 536.0
min_value = -45.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="Options"]
margin_top = 540.0
margin_right = 100.0
margin_bottom = 571.0
text = "Music Volume
"

[node name="MusicSlider" type="HSlider" parent="Options"]
margin_top = 575.0
margin_right = 100.0
margin_bottom = 591.0
min_value = -45.0
max_value = 0.0

[node name="Button" type="Button" parent="Options"]
margin_top = 595.0
margin_right = 100.0
margin_bottom = 615.0
text = "Back"

[node name="main" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[connection signal="pressed" from="OptionsMenu/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="OptionsMenu/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="OptionsMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="OptionsMenu/Leaderboards" to="." method="_on_Leaderboards_pressed"]
[connection signal="value_changed" from="Options/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/FXSlider" to="." method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="Options/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="Options/Button" to="." method="_on_Button_pressed"]
